# CryptoCapade

./: README.md  best.pt  config.py  main.py  pyproject.toml
controllers/: app_controller.py  prediction_controller.py
lightning_logs/version_0/: events.out.tfevents.1745669985.192.168.1.7.27202.1
lightning_logs/version_1/: events.out.tfevents.1745669986.192.168.1.7.27202.2  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1745674339.192.168.1.7.37402.1
lightning_logs/version_3/: events.out.tfevents.1745674339.192.168.1.7.37402.2  hparams.yaml
models/: BTC_lstm_model.h5  BTC_lstm_model.pth  BTC_lstm_scaler.joblib  ETH_lstm_model.h5  LTC_lstm_model.h5  XRP_lstm_model.h5  btc_lstm_model.h5
trained_models/: BTC_tft-epoch=01-val_loss=0.0030.ckpt  BTC_tft_model-epoch=04-val_loss=0.0012.ckpt  BTC_xgb_model.joblib  BTC_xgboost_model.joblib
trained_models/BTC_tft_logs/version_0/: events.out.tfevents.1745674306.192.168.1.7.37402.0  hparams.yaml
trained_models/BTC_tft_model_logs/version_0/: events.out.tfevents.1745669941.192.168.1.7.27202.0  hparams.yaml
trainers/: ARIMA.py  arima_trainer.py  lasso_trainer.py  linearRegression.py  linear_regression_trainer.py  loader.py  lstm_trainer.py  lstm_trainer_2.py  ridge_trainer.py  transformer_trainer.py  xgboost_trainer.py
trainers/sample_data/: BTC-USD_data.csv  ETH-USD_data.csv
utils/: analysis.py  data_fetcher.py  featureBuilder.py  input_control.py  visualization.py
