[tool.poetry]
name = "cryptocapade"
version = "0.1.0"
description = ""
authors = ["Ahmet Çağatay Savaşlı <cagatay.savasli@ozu.edu.tr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
