[tool.poetry]
name = "cryptocapade"
version = "0.1.0"
description = ""
authors = ["Ahmet Çağatay Savaşlı <cagatay.savasli@ozu.edu.tr>"]
readme = "README.md"
packages = [
    { include = "controllers" },
    { include = "trainers" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.2.3"
numpy = ">=1.26.0,<2.2.0"
matplotlib = "^3.10.1"
streamlit = "^1.44.1"
scikit-learn = "^1.6.1"
tensorflow = "^2.19.0"
pandas-ta = "^0.3.14b0"
requests = "^2.32.3"
xgboost = "^3.0.0"
torch = "^2.6.0"
yfinance = "^0.2.55"
optuna = "^4.3.0"
pytorch-lightning = "^2.5.1"
pytorch-forecasting = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
